# fund-screener

./: README.md  config.yaml.example  financial_data.db  pyproject.toml
results/: aapl_analysis.json  hyundai_analysis.json  infy_analysis.json  msft_analysis.json  nvda_analysis.json  reliance_analysis.json  swiggy_analysis.json  tcs_analysis.json  urbancomp_analysis.json
src/: __init__.py  config.py  data_fetcher.py  database.py  main.py  models.py  processor.py  signals.py
src/financial_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_processor.py  test_signals.py
